--- a/views/home.ejs
+++ b/views/home.ejs
@@ -88,7 +88,7 @@
             <h2 class="card-title">Expectonum charm with harry potter.</h2>
             <p>Step into the enchanting world of Harry Potter with this intricately detailed Lego set at Hogwarts.</p>
             <div class="card-actions justify-end">
-              <a href="/lego/sets/001-1" class="btn btn-primary">View</a>
+              <a href="/lego/sets/3638" class="btn btn-primary">View</a>
             </div>
           </div>
 
@@ -104,7 +104,7 @@
             <h2 class="card-title">Harry and Hermione in Dark Forest.</h2>
             <p>Immerse yourself in the epic journey in dark forest with Harry and Hermione in magical world of Hogwarts.</p>
             <div class="card-actions justify-end">
-              <a href="/lego/sets/028-1" class="btn btn-primary">View</a>
+              <a href="/lego/sets/3639" class="btn btn-primary">View</a>
             </div>
           </div>
 
@@ -120,7 +120,7 @@
             <h2 class="card-title">Princess Castle</h2>
             <p>Get your princess and beast with thier castle. Includes many accessory.</p>
             <div class="card-actions justify-end">
-              <a href="/lego/sets/03093-1" class="btn btn-primary">View</a>
+              <a href="/lego/sets/3640" class="btn btn-primary">View</a>
             </div>
           </div>
 
